--- a/components/organisms/ServiceItemGrid/ServiceItemGrid.module.scss
+++ b/components/organisms/ServiceItemGrid/ServiceItemGrid.module.scss
@@ -1,27 +1,40 @@
 @import "../../../styles/baseline/_styles";
 
 .service {
-    background-image: url('../../../public/assets/img/bg-services.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    padding: 70px 0;
+    // background-image: url('../../../public/assets/img/bg-services.jpg');
+    // background-repeat: no-repeat;
+    // background-position: center;
+    // background-size: cover;
+    padding: 90px 0;
     position: relative;
-    background-attachment: fixed;
+    text-align: center;
 
     @include respond-to($bp-sm){
         padding: 50px 0;
     }
 
-    &::after {
+    &::after{
         content: '';
-        background-color: rgba(0, 0, 0, 0.7);
         position: absolute;
+        bottom: 0;
+        left: 50%;
         width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
+        transform: translateX(-50%);
+        height: 4px;
+        background: linear-gradient(to left,  #D0E5F3, #214440,);
+        z-index: 1;
+        max-width: 1300px;
     }
+
+    // &::after {
+    //     content: '';
+    //     background-color: rgba(0, 0, 0, 0.7);
+    //     position: absolute;
+    //     width: 100%;
+    //     height: 100%;
+    //     top: 0;
+    //     left: 0;
+    // }
 
     .gridItems {
         margin-top: 50px;
@@ -52,4 +65,10 @@
     text-align: center;
     z-index: 1;
     position: relative;
+}
+
+.containerTitle{
+    max-width: 800px;
+    margin: 0 auto;
+    margin-bottom: 40px;
 }
