--- a/components/organisms/Footer/Footer.module.scss
+++ b/components/organisms/Footer/Footer.module.scss
@@ -1,24 +1,41 @@
 @import "../../../styles/baseline/_styles";
 
 .footer-section{
-    background-color: $green-black;
     padding: 20px 0;
 
     .container{
+        background-color: $green-black;
+        padding: 17px 50px;
         display: flex;
         justify-content: space-between;
+        border-radius: 8px;
+        position: relative;
 
         @include respond-to($bp-sm){
             flex-direction: column;
             align-items: center;
             gap: 10px;
         }
+
+        &::after{
+            content: '';
+            position: absolute;
+            bottom: 20%;
+            left: 50%;
+            width: 100%;
+            transform: translateX(-50%);
+            height: 4px;
+            background: linear-gradient(to right,  #D0E5F3, #214440,);
+            z-index: 1;
+            max-width: 1200px;
+            @include respond-to($bp-sm){
+                display: none;
+            }
+        }
     }
 
     .icon-social{
-        :first-child{
-            margin-right: 15px;
-        }
+        margin-right: 15px;
     }
 
     .icon{
@@ -34,6 +51,10 @@
 }
 
 .copy {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+
     @include respond-to($bp-sm) {
         text-align: center;
     }
