--- a/styles/baseline/_typography.scss
+++ b/styles/baseline/_typography.scss
@@ -1,5 +1,5 @@
 // Constants - Font Families
-$font-primary: 'Mulish', Calibri, Tahoma, Sans-Serif; 
+$font-primary: Lato, Calibri, Tahoma, Sans-Serif; 
 $font-secondary: 'Be Vietnam Pro', Calibri, Tahoma, Sans-Serif; 
 
 // Constants - Font Weights
