--- a/components/organisms/Accordions/Accordions.module.scss
+++ b/components/organisms/Accordions/Accordions.module.scss
@@ -2,6 +2,7 @@
 .accordionsComponent{
     padding-top: 50px;
     padding-bottom: 50px;
+    overflow: hidden;
     @include respond-above($bp-lg){
         display: none;
     }
