--- a/components/organisms/Menu/Menu.module.scss
+++ b/components/organisms/Menu/Menu.module.scss
@@ -25,22 +25,20 @@
   @include respond-to($bp-lg) {
     padding: initial;
   }
+  .icon-social {
+    display: flex;
+    gap: 20px;
 
-  // &:after {
-  //   content: '';
-  //   background-color: $color-black-2;
-  //   width: 40%;
-  //   height: 100%;
-  //   position: absolute;
-  //   right: -45px;
-  //   top: 0;
-  //   transform: skewX(-35deg);
-  //   z-index: -1;
-
-  //   @include respond-to($bp-lg) {
-  //     display: none;
-  //   }
-  // }
+    a {
+      border: solid 2px transparent;
+      border-radius: 2px;
+      padding: 3px;
+      transition: .2s;
+      &:hover {
+        border: solid 2px #05a34b;
+      }
+    }
+  }
 
   &.active {
     // height: 50%;
@@ -131,7 +129,7 @@
   }
 }
 
-.expanded{
+.expanded {
   &:first-child {
     top: 16px;
     transform: rotate(135deg);
@@ -178,7 +176,7 @@
   &:last-child {
     margin: initial;
     background-color: $color-cuarto;
-    @include respond-to($bp-lg){
+    @include respond-to($bp-lg) {
       color: $color-white;
     }
   }
