Revert "nueva solicitud del cliente"
This reverts commit 2c7da287c0bef9242ca35abe45ea5d2181e0be35.

--- a/components/organisms/Menu/Menu.module.scss
+++ b/components/organisms/Menu/Menu.module.scss
@@ -25,20 +25,22 @@
   @include respond-to($bp-lg) {
     padding: initial;
   }
-  .icon-social {
-    display: flex;
-    gap: 20px;
 
-    a {
-      border: solid 2px transparent;
-      border-radius: 2px;
-      padding: 3px;
-      transition: .2s;
-      &:hover {
-        border: solid 2px #05a34b;
-      }
-    }
-  }
+  // &:after {
+  //   content: '';
+  //   background-color: $color-black-2;
+  //   width: 40%;
+  //   height: 100%;
+  //   position: absolute;
+  //   right: -45px;
+  //   top: 0;
+  //   transform: skewX(-35deg);
+  //   z-index: -1;
+
+  //   @include respond-to($bp-lg) {
+  //     display: none;
+  //   }
+  // }
 
   &.active {
     // height: 50%;
@@ -129,7 +131,7 @@
   }
 }
 
-.expanded {
+.expanded{
   &:first-child {
     top: 16px;
     transform: rotate(135deg);
@@ -176,7 +178,7 @@
   &:last-child {
     margin: initial;
     background-color: $color-cuarto;
-    @include respond-to($bp-lg) {
+    @include respond-to($bp-lg){
       color: $color-white;
     }
   }
