--- a/components/molecules/ServiceItem/ServiceItem.module.scss
+++ b/components/molecules/ServiceItem/ServiceItem.module.scss
@@ -53,10 +53,10 @@
       border-color: $color-tertiary;
 
       span{
-        width: 70px !important;
-        height: 70px !important;
-        position: relative !important;
-        margin-bottom: 15px !important;
+        // width: 70px !important;
+        // height: 70px !important;
+        // position: relative !important;
+        // margin-bottom: 15px !important;
       }
     }
   
