--- a/components/organisms/Menu/Menu.module.scss
+++ b/components/organisms/Menu/Menu.module.scss
@@ -77,6 +77,24 @@
   }
 }
 
+.brand{
+  span{
+    @include respond-to($bp-lg){
+      width: 60px !important;
+      height: 60px !important;
+
+      &>span{
+        display: none !important;
+      }
+
+      img{
+        border: 2px solid $color-black-2 !important;
+        border-radius: 50%;
+      }
+    }
+  }
+}
+
 .menu {
   width: 100%;
   z-index: 8;
@@ -90,7 +108,7 @@
     position: fixed;
     max-height: 65px;
     height: 100vh;
-    padding: 6px 0;
+    padding: 2px 0;
   }
 }
 
